Update code changes for localhost to deploy link

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="EduUnify" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Poppins:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 
     <meta property="og:title" content="EduUnify - Unified Educational Data Management" />
     <meta property="og:description" content="Professional platform for educational institutions, students, and government departments" />
@@ -18,6 +18,8 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@eduunify" />
     <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+
+    <link rel="icon" type="image/png" href="/Logo.png" />
   </head>
 
   <body>
